package entity.book;

public enum Status {
    AVAILABLE,
    UNAVAILABLE;
}
