@startuml
'https://plantuml.com/class-diagram

class Book <<Entity>> {
-id: Long
-title: String
-author: String
-price: Double
-status: Status
-edition: Integer
-bookType: BookType
}

class User <<Entity>> {
-firstName: String
-lastName: String
-age: Integer
-role: Role
-address: Address
}

class Client <<Entity>> {
-books: List<Book>

+rentBook()
+reserveBook()
}

class Librarian <<Entity>> {
-library: Library

+invoice()
+updateBorrowList()
+updateBookInfo()
+addBook()
+removeBook()
}

class Library <<Entity>> {
-bookList: List<Book>
-address: Address
-borrowList: Set<BorrowDetail>
}

class Address <<Value Object>> {
-street: String
-district: String
-postalCode: Integer
}

class Journal <<Entity>> {
}

class StudyBook <<Entity>> {
}

class Magazine <<Entity>> {
}

enum Status <<Value Object>> {
AVAILABLE
UNAVAILABLE
}

enum Role <<Value Object>> {
CLIENT
LIBRARIAN
}

enum BookType <<Value Object>> {
JOURNAL
STUDY_BOOK
MAGAZINE
}

stereotype BorrowDetail <<Record>> {
-renter: Client
-rentedBook: Book
-daysRentedFor: Integer
-cost: Double
-timestamp: Double
}

Book *--left> Status
User *--left> Role
User *--> Address
Librarian *--> Library
Library *--up> Address
Book *--right> BookType

Journal --up|> Book
StudyBook --up|> Book
Magazine --up|> Book

Client --up|> User
Librarian --up|> User

@enduml